# High-Performance-CFD-Solver-for-Laminar-Pipe-Flow-Problem

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  cuda_filter.py  dox_filter.sh  doxy_config  navier  navier_stokes_gpu  navier_stokes_gpu.cu
include/: boundary_conditions.h  common.cuh  coordinates.cuh  kernels.cuh  navier_stokes.cuh  solver.cuh  uv_velocity.h
prototypes/: Derivatives.cpp  clad_ad  clad_ad.cpp  clad_test  clad_test.cpp  codi  codi.cpp  coord  coordinates_optimization.cpp  full  full_version.cu  full_version.md  jacobian_coo.npz  jacobian_plot.py  kernels_codi.cu  lev.cu  lev.h  lhs.npz  lhs_plot.py  out.txt  plot.py  sanitizer_report.txt  simulation_results.npz  solution.txt  test_add  test_add.cu  test_ata  test_ata.cu  test_cublas  test_cublas.cu  test_cudss  test_cudss.cu  test_identity  test_identity.cu  test_matrix_vector  test_matrix_vector.cu  test_printing  test_printing_csc.cu  test_trim  test_trim.cu
prototypes/plots/: curl.py  curl_3d.py  div.py  div_3d.py
scripts/: build_with_clang.sh  build_with_clang_and_tests.sh  run_and_time.sh  tests_run.sh
src/: boundary_conditions.cpp  coordinates.cpp  coordinates.cu  kernels.cu  main.cpp  navier_stokes.cu  solver.cu  uv_velocity.cpp
tests/: CMakeLists.txt  main_test.cpp  main_test_small.cpp  results_test.cpp  results_test_5.cpp  test_uv_velocity_cpu.cpp
tests/test_results_original/: results_for_fold(2-2-2).txt  results_for_fold(5-5-5).txt  results_for_jacobian(2-2-2).txt  results_for_jacobian(5-5-5).txt
